fix dropdown alignment

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -14,7 +14,7 @@ footer{
     width: 60px; 
     height: 60px;
     padding: 10px;
-    margin: 0 25px 0 25px;
+    margin: 0 20px 0 20px;
     opacity: 0.6;
 
     &:hover{
