--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -55,7 +55,7 @@
 .dropdown2 {
     position:absolute;
     top: 100%;
-    left: 5;
+    right: 10px;
     /* position: fixed;
     top: 50%;
     left: 50%;
